# RNVS-2019-Blatt4

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  make.sh  test.sh
src/: client.c  debug.h  peer.c  server.c
src/generic/: commander.h  data_helper.c  data_helper.h  hash_helper.c  hash_helper.h  network.c  network.h  network_peer_handler.h  peer_lookup.c  peer_lookup.h  smart_pointer.h
src/generic/helper/Max/: extended_math.c  extended_math.h
src/generic/wulkanat/helper/: descriptive_types.h  friendly_heap.h
src/helper/max/: concurrent_task.c  concurrent_task.h  extended_math.c  extended_math.h
src/helper/wulkanat/: commander.h  debug.h  flow_plus.h  queue.h  smart_pointer.h
test/: sr.py
test/services/: client_delete.service  client_get.service  client_set.service  peer_client_full_cycle.service  peer_client_request_next.service  peer_client_request_other.service  peer_client_request_this_full.service  peer_lookup_next.service  peer_lookup_other.service
